2005-07-08  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/fastpath.c:
	* tests/http_byteranges.test: Implemented full byte ranges
	support including If-Range and multiple ranges. Supports
	mmap and return from fd modes.

	* nsd/fastpath.c: 
        * tests/http_byteranges.test: Updated to return correct 
        Content-length header.

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/connio.c: Introducing NS_CONN_MAXBUFS parameters which is set
	to 16 by default. It defines how many iov buffers Ns_ConnSend can to use
	simultaneously and max number of ranges nsd supports which is 
	NS_CONN_MAXBUFS/3

2005-07-06  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclinit.c:
	* nsthread/tls.c: Moved call to Tcl_FinalizeThread to end of TLS
	cleanup to better catch any cases of Tcl being used outside
	expected interfaces.

	* nsd/tclcmds.c: Alphabetize list of Tcl commands.

	* nsd/return.c: Clean up some string buffer usage.

	* include/ns.h:
	* nsd/driver.c:
	* nsd/binder.c: Add backlog arg to Ns_SockListenUnix().

	* nsd/binder.c:
	* nsd/driver.c: Localize Windows ifdefs as much as possible.

	* nsd/connio.c:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/driver.c:
	* nsd/server.c:
	* nsd/nsd.h:
	* nsd/nsconf.c:
	* nsd/nsconf.h: Cleanup default configuration by removing unneeded
	values and actually using the defaults throughout the code where
	appropriate.  Some per-server limits have been made per-driver.

2005-07-05  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/fastpath.c:
	* tests/http_byteranges.test:
	* NEWS: Add back preliminary support for HTTP range requests.

	* configure.in:
	* configure: Update version to 4.99.1 and regenerate configure
	script.

	* TAG naviserver-4.99.0-release.

	* Makefile: Add DOAP file to list of files to be included in
	release tarball.

	* nsd/fastpath.c:
	* tests/http_byteranges.test: Temporarily remove in-progress
	support for HTTP Range requests.

	* NEWS: Add release date and remove reference to byte ranges.